--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.13.17",
+    "@types/express": "^4.17.11",
     "atomic-kafka": "0.0.1",
     "axios": "^0.21.1",
     "browserify": "^17.0.0",
